--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/softeng_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SortListView" />
-        <activity android:name=".SortTest"></activity>
+        <activity android:name=".SortTest" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
